# ScannerBot_simul

./: README.md
diff_drive_gazebo/: CMakeLists.txt  package.xml
diff_drive_gazebo/launch/: main.launch
diff_drive_gazebo/models/diffdrive/: model.sdf
diff_drive_gazebo/src/: turtlebot_key.cpp
ros_liv_turtlebot/: CMakeLists.txt  package.xml
ros_liv_turtlebot/launch/: office_turtlebot.launch
scannerbot_description/: CMakeLists.txt  package.xml  scannerbot.config
scannerbot_gazebo/: CMakeLists.txt
scannerbot_gazebo-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  scannerbot_gazebo.cbp
scannerbot_gazebo-build/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
scannerbot_gazebo-build/catkin_generated/installspace/: scannerbot_gazebo.pc  scannerbot_gazeboConfig.cmake
scannerbot_gazebo-build/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
scannerbot_gazebo-build/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
scannerbot_gazebo/launch/: first.launch
scannerbot_gazebo/rooms/: model.sdf
scannerbot_gazebo/rooms/room_1/: model.sdf
scannerbot_gazebo/rooms/room_2/: model.config  model.sdf
scannerbot_gazebo/rooms/room_3/: model.config  model.sdf
scannerbot_gazebo/rooms/room_4/: model.sdf
scannerbot_gazebo/src/: anomalyZone.cpp  anomalyZone.h  controller.cpp  controller.h  main.cpp  main.h  neuralPosition.cpp  neuralPosition.h  trash.cpp
scannerbot_gazebo/worlds/: smallbot.world
turtlebot/: CMakeLists.txt  package.xml
(+12 files in other folders)
